--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   margin-right: auto;
 }
 
+h1 {
+  font-size: 30px;
+}
+
 .logo {
   display: flex;
   align-items: center;
@@ -26,19 +30,86 @@ nav ul {
   flex-wrap: wrap;
   height: 50px;
   align-items: center;
+  text-align: center;
 }
 
 ul li {
   width: 20%;
 }
 
-.brands ul {
+.images img {
+  height: 100%;
+  width: 100%;
+}
+
+.coming-soon {
+  text-align: center;
+}
+
+.coming-soon h1 {
+  padding: 20px;
+}
+
+.coming-soon div {
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
-  height: 200px;
   align-items: center;
 }
 
-.brands li {
+.coming-soon p {
   width: 25%;
+}
+
+.brands {
+  background-color: firebrick;
+  text-align: center;
+}
+
+.brands h1 {
+  padding: 20px;
+}
+
+.brands div {
+  display: flex;
+  flex-wrap: wrap;
+  height: 400px;
+  align-items: center;
+}
+
+.brands p {
+  width: 25%;
+}
+
+.contact-us {
+  text-align: center;
+  height: 400px;
+}
+
+.contact-us h1 {
+  padding: 20px;
+}
+
+.disclaimer {
+  text-align: center;
+}
+
+.disclaimer h1 {
+  padding: 20px;
+}
+
+.disclaimer div {
+  height: 400px;
+  padding: 20px;
+}
+
+.disclaimer p {
+  font-size: 18px;
+  margin-top: 50px;
+}
+
+.footer {
+  height: 100px;
+  text-align: center;
+  padding-top: 20px;
 }
