--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
